FIX: backround dark mode

--- a/src/components/DarkMode/DarkMode.scss
+++ b/src/components/DarkMode/DarkMode.scss
@@ -14,6 +14,9 @@
     background-size: auto;
     background-position: center center
 }
+.nobg {
+    background-image: none;
+}
 .darkModeButton {
     position: fixed;
     top: 120px;
