--- a/src/components/LikesCounter/LikeView.scss
+++ b/src/components/LikesCounter/LikeView.scss
@@ -4,9 +4,6 @@
     right: 20px;
     
 }
-.titleLike {
-
-}
 .likes {
     position: fixed;
     bottom: 20px;
